deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sojournapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sojournapp
  template:
    metadata:
      labels:
        app: <your-app-name>
    spec:
      containers:
      - name: <your-app-name>
        image: <your-container-registry>/<your-app-name>:latest
        ports:
        - containerPort: 80
