service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <your-app-name>-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: <your-app-name>
