ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <your-app-name>-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: <your-domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: <your-app-name>-service
            port:
              number: 80
